footer added/fixed call-to-action overflow

--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,8 @@ header {
     display: flex;
     align-items: center;
     padding: 40px 150px 40px 150px;
+    flex-wrap: wrap;
+    min-width: 150px;
 }
 
 .call-text {
@@ -215,11 +217,16 @@ header {
 
 .call-to-action .signup-button {
     border: 1px solid #f9faf8 ;
+    margin-top: 20px;
 }
 
 
+/* footer */
+
 footer {
     width: 100%;
-    min-height: 100px;
-    flex: 1;
+    text-align: center;
+    color: #f9faf8;
+    font-size: 12px;
+    margin: 40px;
 }
